--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,35 @@
+@import url(https://fonts.googleapis.com/css?family=Fredoka+One|Lato);
+
 * { box-sizing: border-box; }
 
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: 'Avenir Next', Avenir, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   font-size: 20px;
   color: #555;
+  background-color: #ecf0f1; /* porcelain on flatui */
 }
 
 header {
   text-align: center;
   height: 100px;
-  font-size: 48px;
+  font-size: 42px;
+  font-family: 'Fredoka One';
+}
+
+@media only screen and (max-width : 768px) {
+  header {
+    font-size: 32px;
+  }
+}
+
+@media only screen and (max-width : 320px) {
+  header {
+    font-size: 24px;
+  }
 }
 
 main {
@@ -50,13 +66,49 @@ canvas {
   cursor: grabbing;
 }
 
-.instruction {
+/* --- instructions --- */
+
+.instructions-list {
+  position: absolute;
+  /*background: #EEE;*/
+  background-color: #bdc3c7;
+  width: 100%;
+  min-height: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  list-style: none;
+  padding: 10px;
+  z-index: 3; /* above canvas, level select button */
+  left: -100%;
+  transition: left 0.2s;
+  text-align: center;
+  font-family: 'Lato';
+}
+
+.instructions-list li {
+  margin-bottom: 20px;
+}
+
+.instructions-list.is-open {
+  left: 0;
+}
+
+.close-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px;
+  cursor: pointer;
+}
+
+/*.instruction {
   padding: 0 10px;
   text-align: center;
   position: absolute;
   width: 100%;
   padding-bottom: 40px;
-}
+}*/
 
 .button {
   font-family: 'Avenir Next', Avenir, sans-serif;
@@ -76,9 +128,31 @@ canvas {
 }
 
 .top-bar {
-  position: absolute;
+/*  position: absolute;
   left: 0;
-  top: 0;
+  top: 0;*/
+  display: flex;
+  justify-content: center;
+}
+
+.top-bar .button, .top-bar iframe {
+  position: relative;
+  z-index: 2;
+}
+
+/* social media buttons */
+.top-bar iframe {
+  margin: 10px 20px;
+  transform: scale(1.5);
+  -ms-transform: scale(1.5); 
+  -webkit-transform: scale(1.5); 
+  -o-transform: scale(1.5); 
+  -moz-transform: scale(1.5); 
+  transform-origin: top left;
+  -ms-transform-origin: top left;
+  -webkit-transform-origin: top left;
+  -moz-transform-origin: top left;
+  -webkit-transform-origin: top left;
 }
 
 .level-select-button {
